# codebase-copilot

./: .flake8  .gitignore  README.md  chunker_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  test.yml
deploy/docker/: Dockerfile  docker-compose.yml
docker/: Dockerfile  docker-compose.yml
infra/k8/: cluster.yaml
src/: api.py
src/api/: app.py
src/app/: main.py
src/app/api/v1/: errors.py  middleware.py
src/app/core/: config.py  logging.py
src/cli/: chunker_cli.py
src/config/: settings.py
src/core/: chunker.py  embeddings.py
src/domain/: chunker.py  ports.py  services.py
src/infra/: openai_embedder.py  qdrant_index.py
src/models/: code_chunk.py
src/utils/: logging.py
tests/unit/: test_chunker.py
