[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-copilot"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]